# red-duo_datasetmaker

./: CMakeLists.txt  README.md  final_forward_demo.py  hybrid_control_demo.py  logger.py  optimized_forward_demo.py  package.xml  precise_forward_demo.py  processer.py  red_duo_6dof_trajectory.csv  robot_control_test.py  robot_genesis_demo.py  robotcontroller.py  robotinitial.py  simple_position_velocity_demo.py  staged_forward_demo.py
config/: joint_names_red-duo.yaml
controltest/: hybrid_control_demo.py  precise_forward_demo.py  robot_control_test.py  robot_genesis_demo.py  simple_forward_demo.py  simple_position_velocity_demo.py  staged_forward_demo.py
launch/: display.launch  gazebo.launch
log/: rotate_traj.csv  rotate_traj_001.csv
meshes/: left1_duo_link.STL  left1_wheel_link.STL  left2_duo_link.STL  right2_duo_link.STL
urdf/: red-duo-fixed.urdf  red-duo.csv  red-duo.urdf
urdf/meshes/: base_link.STL  left2_wheel_link.STL  right1_duo_link.STL  right1_wheel_link.STL  right2_wheel_link.STL
